--- a/app/src/main/res/navigation/mobile_nav.xml
+++ b/app/src/main/res/navigation/mobile_nav.xml
@@ -8,7 +8,7 @@
         android:id="@+id/mainFragment"
         android:name="com.aykutasil.navigationplayground.ui.main.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
+        tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainFragment_to_loginFragment"
             app:destination="@id/loginFragment"
@@ -20,11 +20,15 @@
             android:id="@+id/action_mainFragment_to_aboutFragment"
             app:destination="@id/aboutFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.aykutasil.navigationplayground.ui.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login">
+
+    </fragment>
+
     <fragment
         android:id="@+id/aboutFragment"
         android:name="com.aykutasil.navigationplayground.ui.about.AboutFragment"
