--- a/app/src/main/res/navigation/mobile_nav.xml
+++ b/app/src/main/res/navigation/mobile_nav.xml
@@ -33,5 +33,13 @@
         android:id="@+id/aboutFragment"
         android:name="com.aykutasil.navigationplayground.ui.about.AboutFragment"
         android:label="fragment_about"
-        tools:layout="@layout/fragment_about" />
+        tools:layout="@layout/fragment_about">
+        <argument
+            android:name="ad"
+            android:defaultValue="default value"
+            app:type="string" />
+        <argument
+            android:name="soyad"
+            app:type="string" />
+    </fragment>
 </navigation>
