deeplink navigation added

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -29,4 +29,10 @@
         android:layout_height="wrap_content"
         android:text="Blog" />
 
+    <Button
+        android:id="@+id/btnDeeplink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DeepLink" />
+
 </LinearLayout>
